Img issue resolved

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./sass/style.css" />
     <link
       rel="stylesheet"
-      href="./fontawesome-free-5.15.3-web/css/all.min.css"
+      href="/fontawesome-free-5.15.3-web/css/all.min.css"
     />
     <title>Shamgar</title>
   </head>
