--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <h2>SK</h2>
       </div>
       <ul class="nav-links">
+        <div class="cut-button">X</div>
         <li><a href="www.google.com" rel="noreferrer">Home</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="www.google.com">Education</a></li>
@@ -137,6 +138,48 @@
 
     <!-- SKILLLS -->
 
+    <!-- PROJECTS SECTION -->
+    <div class="projects x">
+      <div class="x">
+        <a href="#" target="_blank" class="card">
+          <div class="card-img">
+            <img src="../img/001.jpg" alt="SOMETHING" />
+          </div>
+          <div class="card-name">
+            <center><h2>Keyword Extraction</h2></center>
+            <center><p>TF -IDF</p></center>
+          </div>
+          <div class="zinc"></div>
+        </a>
+        <a href="#" target="_blank" class="card">
+          <div class="card-img">
+            <img src="../img/001.jpg" alt="SOMETHING" />
+          </div>
+          <div class="card-name">
+            <center><h2>Spam Filter</h2></center>
+            <center><p>naive Bayes Classifier</p></center>
+          </div>
+          <div class="zinc"></div>
+        </a>
+        <a href="#" target="_blank" class="card">
+          <div class="card-img">
+            <img src="../img/001.jpg" alt="SOMETHING" />
+          </div>
+          <div class="card-name">
+            <center><h2>my Interesting Books</h2></center>
+            <center><p>a website</p></center>
+          </div>
+          <div class="zinc"></div>
+        </a>
+        
+        </a>
+      </div>
+    </div>
+
+
+    <footer>
+        <p> created by Shamgar. &copy; 2021</p>    
+    </footer>
     <script src="./js/scripts.js" defer></script>
     <script src="./js/animations.js" defer></script>
     <script src="./fontawesome-free-5.15.3-web/js/all.min.js"></script>
