--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
       <div class="x">
         <a href="#" target="_blank" class="card">
           <div class="card-img">
-            <img src="../img/001.jpg" alt="SOMETHING" />
+            <img src="./img/001.jpg" alt="SOMETHING" />
           </div>
           <div class="card-name">
             <center><h2>Keyword Extraction</h2></center>
@@ -153,7 +153,7 @@
         </a>
         <a href="#" target="_blank" class="card">
           <div class="card-img">
-            <img src="../img/001.jpg" alt="SOMETHING" />
+            <img src="./img/001.jpg" alt="SOMETHING" />
           </div>
           <div class="card-name">
             <center><h2>Spam Filter</h2></center>
@@ -163,7 +163,7 @@
         </a>
         <a href="#" target="_blank" class="card">
           <div class="card-img">
-            <img src="../img/001.jpg" alt="SOMETHING" />
+            <img src="./img/001.jpg" alt="SOMETHING" />
           </div>
           <div class="card-name">
             <center><h2>my Interesting Books</h2></center>
