--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     <!-- SKILLLS -->
 
     <!-- PROJECTS SECTION -->
-    <div class="projects x">
+    <div class="projects">
       <div class="x">
         <a href="#" target="_blank" class="card">
           <div class="card-img">
@@ -171,7 +171,6 @@
           </div>
           <div class="zinc"></div>
         </a>
-        
         </a>
       </div>
     </div>
