--- a/index.html
+++ b/index.html
@@ -106,12 +106,22 @@
       <h2 class="heading">MY EDUCATION</h2>
       <div class="college" key="{college.instituteName}">
         <div class="date">
-          <p>2012 - 2016</p>
+          <p>2018 - 2022</p>
         </div>
         <div class="place">
-          <p>Montfort High School. Repalle</p>
-          <p>SSC</p>
-          <p>10.00</p>
+          <p class="college-name">IIEST, Shibpur</p>
+          <p class="course-taken">Computer Science & Technology</p>
+          <p>CGPA: 7.04</p>
+        </div>
+      </div>
+      <div class="college" key="{college.instituteName}">
+        <div class="date">
+          <p>2016 - 2018</p>
+        </div>
+        <div class="place">
+          <p class="college-name">Narayana Junior College</p>
+          <p class="course-taken">Mathematics Physics Chemistry</p>
+          <p>97.3 %</p>
         </div>
       </div>
       <div class="college" key="{college.instituteName}">
@@ -119,19 +129,9 @@
           <p>2012 - 2016</p>
         </div>
         <div class="place">
-          <p>Montfort High School. Repalle</p>
-          <p>SSC</p>
-          <p>10.00</p>
-        </div>
-      </div>
-      <div class="college" key="{college.instituteName}">
-        <div class="date">
-          <p>2012 - 2016</p>
-        </div>
-        <div class="place">
-          <p>Montfort High School. Repalle</p>
-          <p>SSC</p>
-          <p>10.00</p>
+          <p class="college-name">Montfort High School,Repalle</p>
+          <p class="course-taken">High School</p>
+          <p>GPA: 10.00</p>
         </div>
       </div>
     </div>
@@ -140,8 +140,14 @@
 
     <!-- PROJECTS SECTION -->
     <div class="projects">
+      <center><h2 class="heading">MY PROJECTS</h2></center>
       <div class="x">
-        <a href="#" target="_blank" class="card">
+        <!-- project 1 -->
+        <a
+          href="https://drive.google.com/drive/folders/1s0eHyWvIdgOFRmOPTiE_49Xl5ire_-ZD?usp=sharing"
+          target="_blank"
+          class="card"
+        >
           <div class="card-img">
             <img src="./img/001.jpg" alt="SOMETHING" />
           </div>
@@ -151,7 +157,12 @@
           </div>
           <div class="zinc"></div>
         </a>
-        <a href="#" target="_blank" class="card">
+        <!-- project 2 -->
+        <a
+          href="https://drive.google.com/drive/folders/1rfO8WtzlEbdAv2zpS_h7WK7MR7blCH43?usp=sharing"
+          target="_blank"
+          class="card"
+        >
           <div class="card-img">
             <img src="./img/001.jpg" alt="SOMETHING" />
           </div>
@@ -161,7 +172,12 @@
           </div>
           <div class="zinc"></div>
         </a>
-        <a href="#" target="_blank" class="card">
+        <!-- project 3 -->
+        <a
+          href="https://my-favorite-book.herokuapp.com/"
+          target="_blank"
+          class="card"
+        >
           <div class="card-img">
             <img src="./img/001.jpg" alt="SOMETHING" />
           </div>
@@ -171,13 +187,26 @@
           </div>
           <div class="zinc"></div>
         </a>
+        <!-- project 4 -->
+        <a
+          href="https://chat-app-1201.netlify.app/"
+          target="_blank"
+          class="card"
+        >
+          <div class="card-img">
+            <img src="./img/001.jpg" alt="SOMETHING" />
+          </div>
+          <div class="card-name">
+            <center><h2>Chat App</h2></center>
+            <center><p>web application</p></center>
+          </div>
+          <div class="zinc"></div>
         </a>
       </div>
     </div>
 
-
     <footer>
-        <p> created by Shamgar. &copy; 2021</p>    
+      <p>created by Shamgar. &copy; 2021</p>
     </footer>
     <script src="./js/scripts.js" defer></script>
     <script src="./js/animations.js" defer></script>
