--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
       </div>
       <ul class="nav-links">
         <div class="cut-button">X</div>
-        <li><a href="www.google.com" rel="noreferrer">Home</a></li>
+        <li><a href="#home" rel="noreferrer">Home</a></li>
         <li><a href="#about">About</a></li>
-        <li><a href="www.google.com">Education</a></li>
-        <li><a href="www.google.com">Projects</a></li>
-        <li><a href="www.google.com">Contact</a></li>
+        <li><a href="#education">Education</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="mailto:shamgar.kommerla@gmail.com">Contact</a></li>
       </ul>
       <div class="burger">
         <div class="line1"></div>
@@ -46,7 +46,7 @@
     </nav>
 
     <!-- MAIN SECTION -->
-    <div class="main">
+    <div class="main" id="home">
       <div class="name-section">
         <p class="name">SHAMGAR KOMMERLA</p>
         <p>web-debveloper, data science enthusiast</p>
@@ -76,7 +76,7 @@
     <!-- ABOUT SECTION -->
     <div class="about-section" id="about">
       <div class="heading">
-        <h2>WHO I AM</h2>
+        <h1>WHO I AM</h1>
       </div>
       <div class="for-centering">
         <div class="picture">
@@ -85,13 +85,14 @@
         <div class="intro">
           <h2>KOMMERLA SHAMGAR STAINES</h2>
           <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo
-            mollitia fuga sequi nemo ipsum rem, repellendus itaque ea recusandae
-            hic veniam asperiores id. Architecto ipsam totam dolorem molestias,
-            earum dolor?
+            Self-motivated and hardworking individual. Looking for a challenging
+            role in a good company to utilize my technical knowledge for its
+            good and also enhance my skills by learning new things. I am good at
+            Web Development, Data Structures and am also learning Data Science
+            now.
           </p>
           <a
-            href="https://www.google.com"
+            href="./files/Resume.pdf"
             target="_blank"
             rel="noreferrer"
             class="button"
@@ -102,8 +103,8 @@
     </div>
 
     <!-- EDUCATION SECTION -->
-    <div class="education">
-      <h2 class="heading">MY EDUCATION</h2>
+    <div class="education" id="education">
+      <h1 class="heading">MY EDUCATION</h1>
       <div class="college" key="{college.instituteName}">
         <div class="date">
           <p>2018 - 2022</p>
@@ -139,8 +140,8 @@
     <!-- SKILLLS -->
 
     <!-- PROJECTS SECTION -->
-    <div class="projects">
-      <center><h2 class="heading">MY PROJECTS</h2></center>
+    <div class="projects" id="projects">
+      <center><h1 class="heading">MY PROJECTS</h1></center>
       <div class="x">
         <!-- project 1 -->
         <a
@@ -149,10 +150,10 @@
           class="card"
         >
           <div class="card-img">
-            <img src="./img/001.jpg" alt="SOMETHING" />
+            <img src="./img/keywords.jpg" alt="SOMETHING" />
           </div>
           <div class="card-name">
-            <center><h2>Keyword Extraction</h2></center>
+            <center><h3>Keyword Extraction</h3></center>
             <center><p>TF -IDF</p></center>
           </div>
           <div class="zinc"></div>
@@ -164,10 +165,10 @@
           class="card"
         >
           <div class="card-img">
-            <img src="./img/001.jpg" alt="SOMETHING" />
+            <img src="./img/spam.jpg" alt="SOMETHING" />
           </div>
           <div class="card-name">
-            <center><h2>Spam Filter</h2></center>
+            <center><h3>Spam Filter</h3></center>
             <center><p>naive Bayes Classifier</p></center>
           </div>
           <div class="zinc"></div>
@@ -179,11 +180,11 @@
           class="card"
         >
           <div class="card-img">
-            <img src="./img/001.jpg" alt="SOMETHING" />
+            <img src="./img/books.jpg" alt="SOMETHING" />
           </div>
           <div class="card-name">
-            <center><h2>my Interesting Books</h2></center>
-            <center><p>a website</p></center>
+            <center><h3>my Interesting Books</h3></center>
+            <center><p>website</p></center>
           </div>
           <div class="zinc"></div>
         </a>
@@ -194,10 +195,10 @@
           class="card"
         >
           <div class="card-img">
-            <img src="./img/001.jpg" alt="SOMETHING" />
+            <img src="./img/chats.jpg" alt="SOMETHING" />
           </div>
           <div class="card-name">
-            <center><h2>Chat App</h2></center>
+            <center><h3>Chat App</h3></center>
             <center><p>web application</p></center>
           </div>
           <div class="zinc"></div>
@@ -206,7 +207,7 @@
     </div>
 
     <footer>
-      <p>created by Shamgar. &copy; 2021</p>
+      <p>created by Shamgar &copy; 2021</p>
     </footer>
     <script src="./js/scripts.js" defer></script>
     <script src="./js/animations.js" defer></script>
