--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <meta
+      name="google-site-verification"
+      content="8TEbsQe1dMrmJZCJPuRA0NnYkORgiLCddKl5qh123B4"
+    />
     <link rel="stylesheet" href="./sass/style.css" />
     <link
       rel="stylesheet"
