--- a/index.html
+++ b/index.html
@@ -8,12 +8,27 @@
       name="google-site-verification"
       content="8TEbsQe1dMrmJZCJPuRA0NnYkORgiLCddKl5qh123B4"
     />
+    <meta
+      name="description"
+      content="Student at IIEST, Shibpur | Web Developer | Data Science enthusiast. Looking for a challenging
+    role in a good company to utilize my technical knowledge for its
+    good and also enhance my skills by learning new things."
+    />
+    <meta
+      name="keywords"
+      content="Kommerla, Shamgar, Staines, Kommerla Shamgar Staines, Shamgar Kommerla, Shamgar Staines, portfolio"
+    />
+    <meta name="author" content="Kommerla Shamgar Staines" />
+
     <link rel="stylesheet" href="./sass/style.css" />
     <link
       rel="stylesheet"
       href="/fontawesome-free-5.15.3-web/css/all.min.css"
     />
-    <title>Shamgar</title>
+
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+
+    <title>&nbsp;Shamgar Kommerla</title>
   </head>
   <body>
     <!-- SCROLL INDICATOR -->
