--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       href="/fontawesome-free-5.15.3-web/css/all.min.css"
     />
 
-    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="./favicon.ico" type="image/x-icon" />
 
     <title>&nbsp;Shamgar Kommerla</title>
   </head>
