--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     />
     <meta
       name="description"
-      content="Student at IIEST, Shibpur | Web Developer | Data Science enthusiast. Looking for a challenging
+      content="Kommerla Shamgar Staines, Student at IIEST, Shibpur | Web Developer | Data Science enthusiast. Looking for a challenging
     role in a good company to utilize my technical knowledge for its
     good and also enhance my skills by learning new things."
     />
