--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     />
     <meta
       name="description"
-      content="Kommerla Shamgar Staines, Student at IIEST, Shibpur | Web Developer | Data Science enthusiast. Looking for a challenging
+      content="Student at IIEST, Shibpur | Web Developer | Data Science enthusiast. Looking for a challenging
     role in a good company to utilize my technical knowledge for its
     good and also enhance my skills by learning new things."
     />
     <meta
       name="keywords"
-      content="Kommerla, Shamgar, Staines, Kommerla Shamgar Staines, Shamgar Kommerla, Shamgar Staines, portfolio"
+      content="Kommerla, Shamgar, Staines, Kommerla Shamgar Staines, Shamgar Kommerla, Shamgar Staines,Shamgar Staines Kommerla"
     />
     <meta name="author" content="Kommerla Shamgar Staines" />
 
