Meta tag changes

--- a/index.html
+++ b/index.html
@@ -21,11 +21,8 @@
     <meta name="author" content="Kommerla Shamgar Staines" />
 
     <link rel="stylesheet" href="./sass/style.css" />
-    <link
-      rel="stylesheet"
-      href="/fontawesome-free-5.15.3-web/css/all.min.css"
-    />
 
+    <link rel="stylesheet" href="./fontawesome/css/all.min.css" />
     <link rel="icon" href="./favicon.ico" type="image/x-icon" />
 
     <title>&nbsp;Shamgar Kommerla</title>
@@ -229,6 +226,6 @@
     </footer>
     <script src="./js/scripts.js" defer></script>
     <script src="./js/animations.js" defer></script>
-    <script src="./fontawesome-free-5.15.3-web/js/all.min.js"></script>
+    <script src="./fontawesome/js/all.min.js"></script>
   </body>
 </html>
