--- a/index.html
+++ b/index.html
@@ -18,7 +18,14 @@
     <meta name="author" content="Kommerla Shamgar Staines" />
 
     <!-- <link rel="stylesheet" href="./fontawesome/css/all.min.css" /> -->
-    <link rel="stylesheet" href="./sass/all.min.css" />
+    <!-- <link rel="stylesheet" href="./sass/all.min.css" /> -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+      integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./sass/style.css" />
     <link rel="icon" href="./favicon.ico" type="image/x-icon" />
 
@@ -223,7 +230,13 @@
     </footer>
 
     <!-- <script src="./fontawesome/js/all.min.js"></script> -->
-    <script src="./js/all.min.js"></script>
+    <!-- <script src="./js/all.min.js"></script> -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/js/all.min.js"
+      integrity="sha512-Tn2m0TIpgVyTzzvmxLNuqbSJH3JP8jm+Cy3hvHrW7ndTDcJ1w5mBiksqDBb8GpE2ksktFvDB/ykZ0mDpsZj20w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <script src="./js/scripts.js" defer></script>
     <script src="./js/animations.js" defer></script>
   </body>
