--- a/index.html
+++ b/index.html
@@ -104,17 +104,14 @@
         <div class="intro">
           <h2>KOMMERLA SHAMGAR STAINES</h2>
           <p>
-            Self-motivated and hardworking individual. Looking for a challenging
-            role in a good company to utilize my technical knowledge for its
-            good and also enhance my skills by learning new things. I am good at
-            Web Development, Data Structures and am also learning Data Science
-            now.
+            I am Kommerla Shamgar Staines, doing B.Tech in Computer Science &
+            Technology from IIEST, Shibpur. Self-learnt, self-motivated and
+            hardworking individual. Looking for a challenging role in a good
+            company to utilize my technical knowledge for its good and also
+            enhance my skills by learning new things. I love Web Development &
+            Data Science. In my free time I listen old songs or simply sleep :)
           </p>
-          <a
-            href="./files/Resume.pdf"
-            target="_blank"
-            rel="noreferrer"
-            class="button"
+          <a href="./files/Resume.pdf" target="_blank" class="button"
             >Download CV</a
           >
         </div>
@@ -163,65 +160,66 @@
       <center><h1 class="heading">MY PROJECTS</h1></center>
       <div class="x">
         <!-- project 1 -->
-        <a
-          href="https://drive.google.com/drive/folders/1s0eHyWvIdgOFRmOPTiE_49Xl5ire_-ZD?usp=sharing"
-          target="_blank"
-          class="card"
-        >
-          <div class="card-img">
-            <img src="./img/keywords.jpg" alt="SOMETHING" />
-          </div>
-          <div class="card-name">
-            <center><h3>Keyword Extraction</h3></center>
-            <center><p>TF -IDF</p></center>
-          </div>
-          <div class="zinc"></div>
-        </a>
+        <div class="card left">
+          <a
+            href="https://drive.google.com/drive/folders/1s0eHyWvIdgOFRmOPTiE_49Xl5ire_-ZD?usp=sharing"
+            target="_blank"
+          >
+            <div class="card-img">
+              <img src="./img/keywords.jpg" alt="SOMETHING" />
+            </div>
+            <div class="card-name">
+              <center><h3>Keyword Extraction</h3></center>
+              <center><p>TF -IDF</p></center>
+            </div>
+            <div class="zinc"></div>
+          </a>
+        </div>
+
         <!-- project 2 -->
-        <a
-          href="https://drive.google.com/drive/folders/1rfO8WtzlEbdAv2zpS_h7WK7MR7blCH43?usp=sharing"
-          target="_blank"
-          class="card"
-        >
-          <div class="card-img">
-            <img src="./img/spam.jpg" alt="SOMETHING" />
-          </div>
-          <div class="card-name">
-            <center><h3>Spam Filter</h3></center>
-            <center><p>naive Bayes Classifier</p></center>
-          </div>
-          <div class="zinc"></div>
-        </a>
+        <div class="card right">
+          <a
+            href="https://drive.google.com/drive/folders/1rfO8WtzlEbdAv2zpS_h7WK7MR7blCH43?usp=sharing"
+            target="_blank"
+          >
+            <div class="card-img">
+              <img src="./img/spam.jpg" alt="SOMETHING" />
+            </div>
+            <div class="card-name">
+              <center><h3>Spam Filter</h3></center>
+              <center><p>naive Bayes Classifier</p></center>
+            </div>
+            <div class="zinc"></div>
+          </a>
+        </div>
+
         <!-- project 3 -->
-        <a
-          href="https://my-favorite-book.herokuapp.com/"
-          target="_blank"
-          class="card"
-        >
-          <div class="card-img">
-            <img src="./img/books.jpg" alt="SOMETHING" />
-          </div>
-          <div class="card-name">
-            <center><h3>my Interesting Books</h3></center>
-            <center><p>website</p></center>
-          </div>
-          <div class="zinc"></div>
-        </a>
+        <div class="card left">
+          <a href="https://my-favorite-book.herokuapp.com/" target="_blank">
+            <div class="card-img">
+              <img src="./img/books.jpg" alt="SOMETHING" />
+            </div>
+            <div class="card-name">
+              <center><h3>my Interesting Books</h3></center>
+              <center><p>website</p></center>
+            </div>
+            <div class="zinc"></div>
+          </a>
+        </div>
+
         <!-- project 4 -->
-        <a
-          href="https://chat-app-1201.netlify.app/"
-          target="_blank"
-          class="card"
-        >
-          <div class="card-img">
-            <img src="./img/chats.jpg" alt="SOMETHING" />
-          </div>
-          <div class="card-name">
-            <center><h3>Chat App</h3></center>
-            <center><p>web application</p></center>
-          </div>
-          <div class="zinc"></div>
-        </a>
+        <div class="card right">
+          <a href="https://chat-app-1201.netlify.app/" target="_blank">
+            <div class="card-img">
+              <img src="./img/chats.jpg" alt="SOMETHING" />
+            </div>
+            <div class="card-name">
+              <center><h3>Chat App</h3></center>
+              <center><p>web application</p></center>
+            </div>
+            <div class="zinc"></div>
+          </a>
+        </div>
       </div>
     </div>
 
