--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    
+    <meta name="google-site-verification" content="8TEbsQe1dMrmJZCJPuRA0NnYkORgiLCddKl5qh123B4" />
+    
     <link rel="stylesheet" href="./sass/style.css" />
     <link rel="icon" href="./favicon.ico" type="image/x-icon" />
 
