--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
     />
     
     <meta name="google-site-verification" content="8TEbsQe1dMrmJZCJPuRA0NnYkORgiLCddKl5qh123B4" />
-    
+<!--     
     <meta name="robots" content="noindex">
-    <meta name="googlebot" content="noindex">
+    <meta name="googlebot" content="noindex"> -->
 
     <link rel="stylesheet" href="./sass/style.css" />
     <link rel="icon" href="./favicon.ico" type="image/x-icon" />
